# Mesh_light_dimming_NFC

components/drivers_nrf/nrf_soc_nosd/: nrf_error.h
components/nfc/t4t_lib/hal/: hal_nfc_t4t.c
examples/common/src/: app_error_weak.c
examples/experimental_dimming/dimming_client/: CMakeLists.txt  light_switch_dimming_client_nrf52832_xxAA_s132_7_0_1.emProject  light_switch_dimming_client_nrf52832_xxAA_s132_7_0_1.emSession
examples/experimental_dimming/dimming_client/include/: sdk_config.h
examples/experimental_dimming/dimming_client/src/: main.c
examples/nfc/writable_ndef_msg/: main.c
examples/nfc/writable_ndef_msg/pca10040/blank/ses/: nfc_writable_ndef_msg_pca10040.emSession
examples/nfc/writable_ndef_msg/pca10040/blank/ses/Output/Debug/Exe/: nfc_writable_ndef_msg_pca10040.elf  nfc_writable_ndef_msg_pca10040.hex  nfc_writable_ndef_msg_pca10040.map
examples/nfc/writable_ndef_msg/pca10040/blank/ses/Output/Release/Exe/: nfc_writable_ndef_msg_pca10040.elf  nfc_writable_ndef_msg_pca10040.hex  nfc_writable_ndef_msg_pca10040.map
integration/nrfx/legacy/: nrf_drv_uart.h
modules/nrfx/drivers/include/: nrfx_timer.h
modules/nrfx/drivers/src/: nrfx_timer.c
